--- a/index.html
+++ b/index.html
@@ -1,2 +1,23 @@
-<body>
-Hola SuperManola
+<!doctype html>
+<html lang="es">
+	<head>
+		<meta charset="utf-8">
+		<title>Text 01 | Three.js | Enrique Espejo</title>
+		<script src="js/jquert.2.0.3.min.js"></script>
+		<script src="js/three.js"></script>
+		<style>
+			body { font-family:"Helvetica","Verdana"; }
+		</style>
+	</head>
+	<body>
+		<h1>Test 01 Three.js | Enrique Espejo</h1>
+		First examples with three.js library for WebGL</body>
+
+		<script type="text/javascript">
+			$(function() {
+				console.log("Iniciado..");
+			)};
+		</script>
+	</body>
+</html>
+
