--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Text 01 | Three.js | Enrique Espejo</title>
-		<script src="js/jquery.2.0.3.min.js"></script>
+		<script src="js/jquery-2.0.3.min.js"></script>
 		<script src="js/three.js"></script>
 		<style>
 			body { font-family:"Helvetica","Verdana"; }
