Index list and ex01 skeleton

--- a/index.html
+++ b/index.html
@@ -2,22 +2,19 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8">
-		<title>Text 01 | Three.js | Enrique Espejo</title>
-		<script src="js/jquery-2.0.3.min.js"></script>
-		<script src="js/three.js"></script>
+		<title>Index of examples | Enrique Espejo</title>
 		<style>
 			body { font-family:"Helvetica","Verdana"; }
 		</style>
 	</head>
 	<body>
-		<h1>Test 01 Three.js | Enrique Espejo</h1>
-		First examples with three.js library for WebGL</body>
+		<h1>Enrique Espejo | Index of examples</h1>
+		Examples with three.js library for WebGL, Leap.js for Leap Motion controller.</body>
+		<ul>
+			<li><a href="ex01.html">Example 01: WebGL three.js Renedring and viewing a 3D object.</a></li>
+		</ul>
 
-		<script type="text/javascript">
-			$(function() {
-				console.log("Iniciado..");
-			});
-		</script>
+		
 	</body>
 </html>
 
