more libs and corrections on index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h1>Enrique Espejo | Index of examples</h1>
 		Examples with three.js library for WebGL, Leap.js for Leap Motion controller.</body>
 		<ul>
-			<li><a href="ex01.html">Example 01: WebGL three.js Renedring and viewing a 3D object.</a></li>
+			<li>Example 01: <a href="ex01.html">WebGL three.js Renedring and viewing a 3D object.</a></li>
 		</ul>
 
 		
