--- a/ex01.html
+++ b/ex01.html
@@ -10,8 +10,10 @@
 		</style>
 	</head>
 	<body>
-		<h1>Example 01 | Enrique Espejo</h1>
-		<p>Example 01: WebGL three.js Renedring and viewing a 3D object.</p>
+		<div id="floating">
+			<h1>Example 01 | Enrique Espejo</h1>
+			<p>Example 01: WebGL three.js Renedring and viewing a 3D object.</p>
+		</div>
 		<div id="out"></div>
 		<script type="text/javascript">
 			$(function() {
@@ -23,6 +25,8 @@
 
 				//var axes = new THREE.AxisHelper(20);
 				//scene.add(axes);
+				var axis = new THREE.AxisHelper(75);
+    			scene.add(axis); 
 
 				var planeGeometry = new THREE.PlaneGeometry(60,20,1,1);
 				var planeMaterial = new THREE.MeshBasicMaterial({color:0xcccccc});
