--- a/ex01.html
+++ b/ex01.html
@@ -23,8 +23,8 @@
 				renderer.setClearColorHex(0xEEEEEE);
 				renderer.setSize(window.innerWidth,window.innerHeight);
 
-				//var axes = new THREE.AxisHelper(20);
-				//scene.add(axes);
+				var axes = new THREE.AxisHelper(20);
+				scene.add(axes);
 				
 
 				var planeGeometry = new THREE.PlaneGeometry(60,20,1,1);
