--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		Examples with three.js library for WebGL, Leap.js for Leap Motion controller.</body>
 		<ul>
 			<li>Example 01: <a href="ex01.html">WebGL three.js Renedring and viewing a 3D object.</a></li>
+			<li>Example 02: <a href="ex02.html">Adding materials, lights, and shadows.</a></li>
 		</ul>
 
 		
