--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<ul>
 			<li>Example 01: <a href="ex01.html">WebGL three.js Renedring and viewing a 3D object.</a></li>
 			<li>Example 02: <a href="ex02.html">Adding materials, lights, and shadows.</a></li>
+			<li>Example 03: <a href="ex03.html">Animating the scene & stats.js.</a></li>
 		</ul>
 
 		
