--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 			<li>Example 01: <a href="ex01.html">WebGL three.js Renedring and viewing a 3D object.</a></li>
 			<li>Example 02: <a href="ex02.html">Adding materials, lights, and shadows.</a></li>
 			<li>Example 03: <a href="ex03.html">Animating the scene & stats.js.</a></li>
+			<li>Example 04: <a href="ex04.html">Using dat-gui, changing values</a></li>
+			<li>Example 05: <a href="ex05.html">Positioning a cube in space</a></li>
 		</ul>
 
 		
