--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 			<li>Example 03: <a href="ex03.html">Animating the scene & stats.js.</a></li>
 			<li>Example 04: <a href="ex04.html">Using dat-gui, changing values</a></li>
 			<li>Example 05: <a href="ex05.html">Positioning a cube in space</a></li>
+			<li>Example 06: <a href="ex06.html">Basic structure for Leap Motion Controller with leap.js</a></li>
+			<li>Example 07: <a href="ex07.html">Render cubes on fingers with three.js and leap.js</a></li>
 		</ul>
 
 		
 	</body>
 </html>
-
