--- a/ex06.html
+++ b/ex06.html
@@ -11,7 +11,7 @@
         </head>
         <body>
             <h1>Example 06 | Enrique Espejo</h1>
-            <p>Basic structure for Leap Motion Controller with leap.js</p>
+            <p>Basic structure for Leap Motion Controller with leap.js, this examples requires Leap Motion Controller Hardware</p>
             <script type="text/javascript">
                 var pausedFrame = null;
                 var latestFrame = null;
