--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" media="all" href="css/estilos.css" />
 		<title>Index of examples | Enrique Espejo</title>
-		<style>
-			body { font-family:"Helvetica","Verdana"; }
-		</style>
 	</head>
 	<body>
 		<h1>Enrique Espejo | Index of examples</h1>
@@ -17,9 +15,10 @@
 			<li>Example 04: <a href="ex04.html">Using dat-gui, changing values</a></li>
 			<li>Example 05: <a href="ex05.html">Positioning a cube in space</a></li>
 			<li>Example 06: <a href="ex06.html">Basic structure for Leap Motion Controller with leap.js</a></li>
-			<li>Example 07: <a href="ex07.html">Render cubes on fingers with three.js and leap.js</a></li>
+			<li>Example 07: <a href="ex07.html">Render hands and fingers with three.js and leap.js</a></li>
 		</ul>
 
 		
 	</body>
 </html>
+
