--- a/ex07.html
+++ b/ex07.html
@@ -13,7 +13,7 @@
         <body>
             <header>
                 <h1>Example 07 | Enrique Espejo</h1>
-                <p>Render cubes on fingers with three.js and leap.js</p>
+                <p>Render hands and fingers with three.js and leap.js</p>
                 <button onclick="document.location.href='index.html'">Índice de ejemplos</button>
             </header>
             <div id="out"></div>
