edded ex08 moving light

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<li>Example 05: <a href="ex05.html">Positioning a cube in space</a></li>
 			<li>Example 06: <a href="ex06.html">Basic structure for Leap Motion Controller with leap.js</a></li>
 			<li>Example 07: <a href="ex07.html">Render hands and fingers with three.js and leap.js</a></li>
+			<li>Example 08: <a href="ex08.html">Render hands and fingers and moving light with three.js and leap.js</a></li>
 		</ul>
 
 		
